[build-system]
requires = ["setuptools>=61.0","hidapi"]
build-backend = "setuptools.build_meta"

[project]
name = "pybuzzers"
version = "1.0.6"
authors = [
    { name = "Cailean Wilkinson", email = "cjw27@st-andrews.ac.uk" },
]
description = "Event-driven Python package for interfacing with Sony Buzz! buzzer sets."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "hidapi"
]

[project.urls]
"Homepage" = "https://github.com/CaileanWilkinson/pybuzzers"
"Bug Tracker" = "https://github.com/CaileanWilkinson/pybuzzers/issues"
